--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
     "/js/main.js": "/js/main.js?id=90b41fbf3594644ee64d",
-    "/js/ripple-admin.js": "/js/ripple-admin.js?id=44ab1969a6dc185ae712"
+    "/js/ingor-admin.js": "/js/ingor-admin.js?id=44ab1969a6dc185ae712"
 }
