--- a/composer.json
+++ b/composer.json
@@ -17,18 +17,19 @@
     ],
     "homepage": "https://github.com/ingorlabs/ingor",
     "require": {
-        "php": "^7.2.5|^8.0",
-        "additionapps/flexible-presenter": "^2.0",
+        "php": "^7.4|^8.0",
+        "additionapps/flexible-presenter": "^2.1",
         "facade/ignition-contracts": "^1.0",
-        "illuminate/contracts": "^6.0|^7.0|^8.0",
-        "inertiajs/inertia-laravel": "^0.2.5",
-        "laravel/framework": "^6.0|^7.0|^8.0",
-        "laravel/ui": "^2.0|^3.0",
+        "illuminate/contracts": "^8.40",
+        "inertiajs/inertia-laravel": "^0.4",
+        "laravel/framework": "^8.40",
+        "laravel/ui": "^3.0",
+        "lorisleiva/laravel-actions": "^2.1",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.3.1",
-        "orchestra/testbench": "^4.0|^5.0|^6.0",
+        "orchestra/testbench": "^6.0",
         "phpunit/phpunit": "^8.0|^9.0"
     },
     "autoload": {
