--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -18,8 +18,10 @@
         <whitelist processUncoveredFilesFromWhitelist="true">
             <directory suffix=".php">./src</directory>
             <exclude>
-                <file>./src/WizardServiceProvider.php</file>
-                <directory>./src/Console</directory>
+                <file>./src/IngorServiceProvider.php</file>
+                <file>./src/IngorApplicationServiceProvider.php</file>
+                <file>./src/IngorFlexiblePresenter.php</file>
+                <directory>./src/Concerns</directory>
                 <directory>./src/Contracts</directory>
                 <directory>./src/Exceptions</directory>
             </exclude>
